# llm-zoomcamp-dtc

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
01-intro/: Dockerfile  docker-compose.yaml  hw1.ipynb  pyproject.toml
02-vector-search/: hw2.ipynb
0a-agents/: hw0a.ipynb  weather_server.py
dlt/: hwdlt.ipynb
