[tool.poetry]
name = "llm-zoomcamp"
version = "0.1.0"
description = "llm-zoomcamp HW1: OpenAI + Elasticsearch"
authors = ["Yan Nusinovich <yan.nusinovich@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
openai = "^1.30"
elasticsearch = "^8.17"
pandas = "^2.2"
scikit-learn = "^1.4"
tqdm = "^4.66"  
notebook = "7.1.2"
ipywidgets = "^8.1"
jupyterlab-widgets = "^3.0"
tiktoken = "^0.7"

[tool.poetry.group.dev.dependencies]
black = "^24.4"
isort = "^5.13"
pytest = "^8.1"
jupyter = "^1.0"
ipykernel = "^6.29"
python-dotenv = "^1.0"
